--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Shoes</title>
 </head>
 <body>
+    <main>
+        <section class="full-page container">
+            <div class="col flex">
+                <div class="card border">
+                    <div class="card-image border">
+                        <img src="img/01.png" alt="shoes1" class="blue-shoes">
+                    </div>
+                    <div class="card-text border">
+                        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
