--- a/index.html
+++ b/index.html
@@ -3,23 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--STYLESHEET-->
     <link rel="stylesheet" href="CSS/style.css">
     <title>Shoes</title>
 </head>
 <body>
-    <main>
-        <section class="full-page container">
-            <div class="col flex">
-                <div class="card border">
-                    <div class="card-image border">
-                        <img src="img/01.png" alt="shoes1" class="blue-shoes">
-                    </div>
-                    <div class="card-text border">
-                        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+    <main><!--WRAPPER-->
+        <div class="wrapper">
+            <!--PRIMA SEZIONE-->
+            <section class="semi-full-page container bg-red" id="blue-shoes">
+                <div class="col flex">
+                    <div class="card">
+                        <div class="card-image border">
+                            <img src="img/01.png" alt="shoes1" class="blue-shoes">
+                        </div>
+                        <div class="card-text border">
+                            <h1 class="c-yellow">IL NOSTRO MODELLO DI PUNTA</h1>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <!--SECONDA SEZIONE-->
+            <section class="semi-full-page container bg-green" id="blue-shoes">
+                <div class="col flex">
+                    <div class="card">
+                        <div class="card-image border">
+                            <img src="img/02.png" alt="shoes1" class="blue-shoes">
+                        </div>
+                        <div class="card-text border">
+                            <h1 class="c-yellow">IL NOSTRO MODELLO DI PUNTA</h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--TERZA SEZIONE-->
+            <section class="semi-full-page container bg-yellow" id="blue-shoes">
+                <div class="col flex">
+                    <div class="card">
+                        <div class="card-image border">
+                            <img src="img/03.png" alt="shoes1" class="blue-shoes">
+                        </div>
+                        <div class="card-text border">
+                            <h1 class="c-green">IL NOSTRO MODELLO DI PUNTA</h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        
     </main>
     
 </body>
