--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nosifer&family=Permanent+Marker&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <!--STYLESHEET-->
     <link rel="stylesheet" href="CSS/style.css">
     <title>Shoes</title>
@@ -24,34 +27,40 @@
                 </div>
             </section>
             <!--SECONDA SEZIONE-->
-            <section class="semi-full-page container bg-green" id="blue-shoes">
+            <section class="semi-full-page container bg-green" id="tommy">
                 <div class="col flex">
                     <div class="card">
-                        <div class="card-image border">
+                        <div class="card-image">
                             <img src="img/02.png" alt="shoes1" class="blue-shoes">
                         </div>
-                        <div class="card-text border">
+                        <div class="card-text">
                             <h1 class="c-yellow">IL NOSTRO MODELLO DI PUNTA</h1>
                         </div>
                     </div>
                 </div>
             </section>
             <!--TERZA SEZIONE-->
-            <section class="semi-full-page container bg-yellow" id="blue-shoes">
+            <section class="semi-full-page container bg-yellow" id="converse">
                 <div class="col flex">
                     <div class="card">
-                        <div class="card-image border">
+                        <div class="card-image">
                             <img src="img/03.png" alt="shoes1" class="blue-shoes">
                         </div>
-                        <div class="card-text border">
+                        <div class="card-text">
                             <h1 class="c-green">IL NOSTRO MODELLO DI PUNTA</h1>
                         </div>
                     </div>
                 </div>
             </section>
         </div>
-        
     </main>
-    
+    <!--ELEMENTO NAVIGAZIONE-->
+    <nav class="side-menu">
+        <ul>
+            <li><a href="#blue-shoes">1</a></li>
+            <li><a href="#tommy">2</a></li>
+            <li><a href="#converse">3</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
