--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main><!--WRAPPER-->
         <div class="wrapper">
             <!--PRIMA SEZIONE-->
-            <section class="semi-full-page container bg-red" id="blue-shoes">
+            <section class="full-page bg-red" id="blue-shoes">
                 <div class="col flex">
                     <div class="card">
                         <div class="card-image border">
@@ -27,7 +27,7 @@
                 </div>
             </section>
             <!--SECONDA SEZIONE-->
-            <section class="semi-full-page container bg-green" id="tommy">
+            <section class="full-page bg-green" id="tommy">
                 <div class="col flex">
                     <div class="card">
                         <div class="card-image">
@@ -40,7 +40,7 @@
                 </div>
             </section>
             <!--TERZA SEZIONE-->
-            <section class="semi-full-page container bg-yellow" id="converse">
+            <section class="full-page bg-yellow" id="converse">
                 <div class="col flex">
                     <div class="card">
                         <div class="card-image">
